about page pic stretch fix again 3

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -28,6 +28,12 @@
   overflow: hidden;
 }
 
+.image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 @media (max-width: 550px) {
   .mug {
       width: 80%;
